styles(skeleton.css/index.html): add skeleton

--- a/index.html
+++ b/index.html
@@ -4,10 +4,39 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
-    <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="skeleton.css">
+    <link rel="stylesheet" href="global.css">
     <title>Flixster</title>
 </head>
 <body>
-    
+    <nav>
+        <h1>
+            <span>Flix</span>ster
+        </h1>
+        <div>
+
+        </div>
+    </nav>
+    <main>
+        <aside>
+            <h2></h2>
+            <span></span>
+            <span></span>
+            <span></span>
+        </aside>
+        <section>
+            <h2></h2>
+            <div class="container">
+                <div class="container-card"></div>
+                <div class="container-card"></div>
+                <div class="container-card"></div>
+                <div class="container-card"></div>
+                <div class="container-card"></div>
+                <div class="container-card"></div>
+                <div class="container-card"></div>
+                <div class="container-card"></div>
+            </div>
+        </section>
+    </main>
 </body>
 </html>
