--- a/index.html
+++ b/index.html
@@ -16,15 +16,20 @@
         <div>
 
         </div>
+        <div class="hamburger">
+            <div></div>
+            <div></div>
+            <div></div>
+        </div>
     </nav>
     <main>
-        <aside>
+        <aside class="aside">
             <h2></h2>
             <span></span>
             <span></span>
             <span></span>
         </aside>
-        <section>
+        <section class="section">
             <h2></h2>
             <div class="container">
                 <div class="container-card"></div>
@@ -38,5 +43,6 @@
             </div>
         </section>
     </main>
+    <script src="script.js"></script>
 </body>
 </html>
