--- a/index.html
+++ b/index.html
@@ -6,6 +6,7 @@
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
     <link rel="stylesheet" href="skeleton.css">
     <link rel="stylesheet" href="global.css">
+    <link rel="stylesheet" href="style.css">
     <title>Flixster</title>
 </head>
 <body>
@@ -13,9 +14,7 @@
         <h1>
             <span>Flix</span>ster
         </h1>
-        <div>
-
-        </div>
+        <div class="search"></div>
         <div class="hamburger">
             <div></div>
             <div></div>
@@ -30,7 +29,7 @@
             <span></span>
         </aside>
         <section class="section">
-            <h2></h2>
+            <h2 class="title"></h2>
             <div class="container">
                 <div class="container-card"></div>
                 <div class="container-card"></div>
