--- a/index.html
+++ b/index.html
@@ -1,5 +1,6 @@
 <!DOCTYPE html>
 <html lang="en">
+
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
@@ -7,8 +8,10 @@
     <link rel="stylesheet" href="skeleton.css">
     <link rel="stylesheet" href="global.css">
     <link rel="stylesheet" href="style.css">
+    <link rel="stylesheet" href="pop.css">
     <title>Flixster</title>
 </head>
+
 <body>
     <nav>
         <h1>
@@ -30,18 +33,20 @@
         </aside>
         <section class="section">
             <h2 class="title"></h2>
-            <div class="container">
-                <div class="container-card"></div>
-                <div class="container-card"></div>
-                <div class="container-card"></div>
-                <div class="container-card"></div>
-                <div class="container-card"></div>
-                <div class="container-card"></div>
-                <div class="container-card"></div>
-                <div class="container-card"></div>
+            <div class="container" id="movies-grid">
+                <div class="container-card movie-card"></div>
+                <div class="container-card movie-card"></div>
+                <div class="container-card movie-card"></div>
+                <div class="container-card movie-card"></div>
+                <div class="container-card movie-card"></div>
+                <div class="container-card movie-card"></div>
+                <div class="container-card movie-card"></div>
+                <div class="container-card movie-card"></div>
             </div>
         </section>
     </main>
+    <div class="pop-up"></div>
     <script src="script.js"></script>
 </body>
+
 </html>
