--- a/index.html
+++ b/index.html
@@ -34,6 +34,9 @@
         <section class="section">
             <h2 class="title"></h2>
             <div class="container" id="movies-grid">
+                <!--
+                    Skeleton HTML for loading
+                -->
                 <div class="container-card movie-card"></div>
                 <div class="container-card movie-card"></div>
                 <div class="container-card movie-card"></div>
@@ -46,6 +49,11 @@
         </section>
     </main>
     <div class="pop-up"></div>
+    <script src="fetcher.js"></script>
+    <script src="hydration.js"></script>
+    <script src="categories.js"></script>
+    <script src="search.js"></script>
+    <script src="popup.js"></script>
     <script src="script.js"></script>
 </body>
 
