--- a/index.html
+++ b/index.html
@@ -9,6 +9,7 @@
     <link rel="stylesheet" href="global.css">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="pop.css">
+    <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <title>Flixster</title>
 </head>
 
