--- a/index.html
+++ b/index.html
@@ -9,6 +9,8 @@
     <link rel="stylesheet" href="global.css">
     <link rel="stylesheet" href="style.css">
     <link rel="stylesheet" href="pop.css">
+    <link rel="stylesheet" href="ux.css">
+    <link rel="stylesheet" href="load.css">
     <link rel="shortcut icon" href="favicon.ico" type="image/x-icon">
     <title>Flixster</title>
 </head>
@@ -50,6 +52,41 @@
         </section>
     </main>
     <div class="pop-up"></div>
+    <button onclick="addMoreMovies();" class="btn-load-more">
+        <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
+            <path d="M416 208H272V64c0-17.67-14.33-32-32-32h-32c-17.67 0-32 14.33-32 32v144H32c-17.67 0-32 14.33-32 32v32c0 17.67 14.33 32 32 32h144v144c0 17.67 14.33 32 32 32h32c17.67 0 32-14.33 32-32V304h144c17.67 0 32-14.33 32-32v-32c0-17.67-14.33-32-32-32z"
+            /></svg>
+    </button>
+    <div class="ux">
+        <div class="ux-card">
+            <h2>
+                User accessibility
+            </h2>
+            <div class="ux-option">
+                <span>
+                    Dark mode
+                </span>
+                <button class="ux-btn enabled" id="dark-mode" onclick="enableDarkMode();">
+                    On
+                </button>
+            </div>
+            <div class="ux-option">
+                <span>
+                    Enable auto-load
+                </span>
+                <button class="ux-btn enabled" id="auto-load" onclick="enableAutoLoad();">
+                    On
+                </button>
+            </div>
+            <div>
+                <button class="ux-btn-start" onclick="startApp();">
+                    Start App
+                </button>
+            </div>
+        </div>
+    </div>
+
+    <script src="ux.js"></script>
     <script src="fetcher.js"></script>
     <script src="hydration.js"></script>
     <script src="categories.js"></script>
