feat(html): add meta tags

--- a/index.html
+++ b/index.html
@@ -5,6 +5,20 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <meta http-equiv="X-UA-Compatible" content="ie=edge">
+    <meta name="theme-color" content="#000000" />
+    <meta name="keywords" content="Flixster, Movies" />
+    <meta property="og:image:secure_url" itemProp="image" content="https://flixster-starter.vercel.app/favicon.ico" />
+    <meta property="og:url" content="https://flixster-starter.vercel.app" />
+    <meta property="og:type" content="website" />
+    <meta property="og:site_name" content="Flixster" />
+    <meta name="twitter:image" content="https://flixster-starter.vercel.app/favicon.ico" />
+    <meta name="twitter:card" content="summary" />
+    <meta name="twitter:image:alt" content="Flixster" />
+    <link rel="icon" type="image/svg" href="https://flixster-starter.vercel.app/favicon.icog">
+    <meta property="og:title" content="Flixster" />
+    <meta property="og:description" content="Flixster, the place to search the best movies!" />
+    <meta name="twitter:title" content="Flixster" />
+    <meta name="twitter:description" content="Flixster, the place to search the best movies!" />
     <link rel="stylesheet" href="skeleton.css">
     <link rel="stylesheet" href="global.css">
     <link rel="stylesheet" href="style.css">
@@ -20,8 +34,8 @@
         <h1>
             <span>Flix</span>ster
         </h1>
-        <div class="search"></div>
-        <div class="hamburger">
+        <div title="Search" class="search"></div>
+        <div title="Menu" class="hamburger">
             <div></div>
             <div></div>
             <div></div>
@@ -55,7 +69,8 @@
     <button onclick="addMoreMovies();" class="btn-load-more">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
             <path d="M416 208H272V64c0-17.67-14.33-32-32-32h-32c-17.67 0-32 14.33-32 32v144H32c-17.67 0-32 14.33-32 32v32c0 17.67 14.33 32 32 32h144v144c0 17.67 14.33 32 32 32h32c17.67 0 32-14.33 32-32V304h144c17.67 0 32-14.33 32-32v-32c0-17.67-14.33-32-32-32z"
-            /></svg>
+            />
+        </svg>
     </button>
     <div class="ux">
         <div class="ux-card">
