--- a/index.html
+++ b/index.html
@@ -34,7 +34,7 @@
         <h1>
             <span>Flix</span>ster
         </h1>
-        <div title="Search" class="search"></div>
+        <div title="Search bar" class="search"></div>
         <div title="Menu" class="hamburger">
             <div></div>
             <div></div>
@@ -50,23 +50,23 @@
         </aside>
         <section class="section">
             <h2 class="title"></h2>
-            <div class="container" id="movies-grid">
+            <div id="movies-grid">
                 <!--
                     Skeleton HTML for loading
                 -->
-                <div class="container-card movie-card"></div>
-                <div class="container-card movie-card"></div>
-                <div class="container-card movie-card"></div>
-                <div class="container-card movie-card"></div>
-                <div class="container-card movie-card"></div>
-                <div class="container-card movie-card"></div>
-                <div class="container-card movie-card"></div>
-                <div class="container-card movie-card"></div>
+                <div class="movie-card"></div>
+                <div class="movie-card"></div>
+                <div class="movie-card"></div>
+                <div class="movie-card"></div>
+                <div class="movie-card"></div>
+                <div class="movie-card"></div>
+                <div class="movie-card"></div>
+                <div class="movie-card"></div>
             </div>
         </section>
     </main>
     <div class="pop-up"></div>
-    <button onclick="triggerLoading();" class="btn-load-more load-more-movies-btn">
+    <button title="Load more" onclick="triggerLoading();" class="load-more-movies-btn">
         <svg xmlns="http://www.w3.org/2000/svg" viewBox="0 0 448 512">
             <path d="M416 208H272V64c0-17.67-14.33-32-32-32h-32c-17.67 0-32 14.33-32 32v144H32c-17.67 0-32 14.33-32 32v32c0 17.67 14.33 32 32 32h144v144c0 17.67 14.33 32 32 32h32c17.67 0 32-14.33 32-32V304h144c17.67 0 32-14.33 32-32v-32c0-17.67-14.33-32-32-32z"
             />
