--- a/index.html
+++ b/index.html
@@ -39,6 +39,7 @@
             <div></div>
             <div></div>
             <div></div>
+            <img src="walk.gif" alt="Walkthrough">
         </div>
     </nav>
     <main>
